[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_file_id"
version = "0.3.4"
description = "An FPS plugin for the file ID API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.9"
dependencies = [
    "sqlite-anyio >=0.2.0,<0.3.0",
    "anyio>=3.6.2,<5",
    "jupyverse-api >=0.12.0,<0.13.0",
]
[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[project.entry-points]
"fps.modules"       = {file_id = "fps_file_id.main:FileIdModule"}
"jupyverse.modules" = {file_id = "fps_file_id.main:FileIdModule"}
