[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_file_watcher"
version = "0.1.3"
description = "An FPS plugin for the file watcher API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.9"
dependencies = [
    "watchfiles >=1.0.4,<2",
    "jupyverse-api >=0.12.0,<0.13.0",
]
[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[project.entry-points]
"fps.modules"       = {file_watcher = "fps_file_watcher.main:FileWatcherModule"}
"jupyverse.modules" = {file_watcher = "fps_file_watcher.main:FileWatcherModule"}
