[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "fps_file_watcher"
version = "0.1.4"
description = "An FPS plugin for the file watcher API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "watchfiles >=1.0.4,<2",
  "jupyverse-api >=0.12.0,<0.13.0",
]
license = "BSD-3-Clause"
license-files = ["COPYING.md"]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://jupyter.org"

[project.entry-points]
"fps.modules" = {file_watcher = "fps_file_watcher.main:FileWatcherModule"}
"jupyverse.modules" = {file_watcher = "fps_file_watcher.main:FileWatcherModule"}
