[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_frontend"
description = "An FPS plugin for the frontend related configuration"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.8"
dependencies = [
    "jupyverse-api",
]
dynamic = ["version"]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [".*"]

[tool.jupyter-releaser]
skip = ["check-links"]

[project.entry-points]
"asphalt.components"   = {frontend = "fps_frontend.main:FrontendComponent"}
"jupyverse.components" = {frontend = "fps_frontend.main:FrontendComponent"}

[tool.hatch.version]
path = "fps_frontend/__init__.py"
