[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_frontend"
version = "0.9.0"
description = "An FPS plugin for the frontend related configuration"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.9"
dependencies = [
    "jupyverse-api >=0.10.0,<0.11.0",
]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [".*"]

[tool.jupyter-releaser]
skip = ["check-links"]

[project.entry-points]
"fps.modules"       = {frontend = "fps_frontend.main:FrontendModule"}
"jupyverse.modules" = {frontend = "fps_frontend.main:FrontendModule"}

[tool.hatch.version]
path = "fps_frontend/__init__.py"
