[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "fps_jupyter_server"
version = "0.2.1"
description = "An FPS plugin for proxying a Jupyter server"
keywords = [ "jupyter", "server", "fastapi", "plugins" ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "anyio",
  "fastapi",
  "fps",
  "httpx",
  "httpx-ws",
  "jupyverse-api >=0.15.0,<0.16.0",
  "jupyverse-auth >=0.2.0,<0.3.0",
  "jupyter-server >=2.17.0,<3.0.0",
  "structlog",
  "typing_extensions >=4.15.0,<5.0.0; python_version<'3.11'",
]
license = "BSD-3-Clause"
license-files = ["COPYING.md"]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://jupyter.org"

[project.entry-points]
"fps.modules" = {jupyter_server = "fps_jupyter_server.main:JupyterServerModule"}
"jupyverse.modules" = {jupyter_server = "fps_jupyter_server.main:JupyterServerModule"}
