[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_jupyterlab"
description = "An FPS plugin for the JupyterLab API"
keywords = [ "jupyter", "server", "fastapi", "plugins" ]
requires-python = ">=3.8"
dependencies = [
  "jupyterlab >=4.0.0b0,<5",
  "jupyverse-api",
]
dynamic = [ "version",]
[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [ ".*",]

[tool.jupyter-releaser]
skip = [ "check-links",]

[project.entry-points]
"asphalt.components"   = {jupyterlab = "fps_jupyterlab.main:JupyterLabComponent"}
"jupyverse.components" = {jupyterlab = "fps_jupyterlab.main:JupyterLabComponent"}

[tool.hatch.version]
path = "fps_jupyterlab/__init__.py"
