[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_jupyterlab"
version = "0.9.0"
description = "An FPS plugin for the JupyterLab API"
keywords = [ "jupyter", "server", "fastapi", "plugins" ]
requires-python = ">=3.9"
dependencies = [
  "jupyterlab-js >=4.4.2,<5",
  "jupyverse-api >=0.10.0,<0.11.0",
]
[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [ ".*",]

[tool.jupyter-releaser]
skip = [ "check-links",]

[project.entry-points]
"fps.modules"       = {jupyterlab = "fps_jupyterlab.main:JupyterLabModule"}
"jupyverse.modules" = {jupyterlab = "fps_jupyterlab.main:JupyterLabModule"}

[tool.hatch.version]
path = "fps_jupyterlab/__init__.py"
