[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "fps_jupyterlab"
version = "0.10.5"
description = "An FPS plugin for the JupyterLab API"
keywords = [ "jupyter", "server", "fastapi", "plugins" ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jupyterlab-js >=4.4.2,<5",
  "jupyverse-api >=0.12.6,<0.13.0",
]
license = "BSD-3-Clause"
license-files = ["COPYING.md"]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://jupyter.org"

[project.entry-points]
"fps.modules" = {jupyterlab = "fps_jupyterlab.main:JupyterLabModule"}
"jupyverse.modules" = {jupyterlab = "fps_jupyterlab.main:JupyterLabModule"}
