[metadata]
name = fps_jupyterlab
version = attr: fps_jupyterlab.__version__
description = An FPS plugin implementing the JupyterLab API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:

install_requires =
  fps >=0.0.8
  fps-auth
  fps-lab
  jupyterlab

[options.entry_points]
fps_router =
    fps-jupyterlab = fps_jupyterlab.routes
fps_config =
    fps-jupyterlab = fps_jupyterlab.config
