[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "fps_jupyterlab_git"
version = "0.1.1"
description = "An FPS plugin for serving jupyterlab-git through a Jupyter server"
keywords = [ "jupyter", "server", "fastapi", "plugins" ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jupyverse-api >=0.14.0,<0.15.0",
  "fps-jupyter-server >=0.1.0,<0.2.0",
  "jupyterlab-git",
]
license = "BSD-3-Clause"
license-files = ["COPYING.md"]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://jupyter.org"

[project.entry-points]
"fps.modules" = {jupyterlab_git = "fps_jupyterlab_git.main:JupyterLabGitModule"}
"jupyverse.modules" = {jupyterlab_git = "fps_jupyterlab_git.main:JupyterLabGitModule"}
