[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_kernel_subprocess"
version = "0.1.0"
description = "An FPS plugin for the kernel subprocess API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.9"
dependencies = [
    "jupyverse-api >=0.10.0,<0.11.0",
    "anyio",
    "pyzmq",
    "zmq-anyio >=0.3.1,<0.4.0",
]
[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[project.entry-points]
"fps.modules"       = {kernel_subprocess = "fps_kernel_subprocess.main:KernelSubprocessModule"}
"jupyverse.modules" = {kernel_subprocess = "fps_kernel_subprocess.main:KernelSubprocessModule"}
