[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_kernel_web_worker"
version = "0.1.2"
description = "An FPS plugin for the kernel web worker API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.9"
dependencies = [
    "jupyverse-api >=0.10.1,<0.11.0",
    "anyio",
]
[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[project.entry-points]
"fps.modules" = {kernel_web_worker = "fps_kernel_web_worker.main:KernelWebWorkerModule"}
