[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fps_kernels"
version = "0.9.0"
description = "An FPS plugin for the kernels API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.9"
dependencies = [
    "python-dateutil",
    "types-python-dateutil",
    "jupyverse-api >=0.10.0,<0.11.0",
    "pycrdt >=0.10.3,<0.13.0",
    "anyio",
]
[project.optional-dependencies]
watchfiles = [
    "watchfiles >=1.0.4,<2",
]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[dependency-groups]
test = [
    "httpx",
]

[project.entry-points]
"fps.modules"       = {kernels = "fps_kernels.main:KernelsModule"}
"jupyverse.modules" = {kernels = "fps_kernels.main:KernelsModule"}
