[metadata]
name = fps_kernels
version = attr: fps_kernels.__version__
description = An FPS plugin implementing the kernels API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:

install_requires =
  fps >=0.0.8
  fps-auth
  fps-lab
  pyzmq
  websockets

[options.entry_points]
fps_router =
    fps-kernels = fps_kernels.routes
