[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_lab"
description = "An FPS plugin for the JupyterLab/RetroLab API"
keywords = [ "jupyter", "server", "fastapi", "pluggy", "plugins",]
requires-python = ">=3.7"
dependencies = [ "fps >=0.0.8", "fps-frontend", "aiofiles", "babel", "json5",]
dynamic = [ "version",]
[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [ ".*",]

[tool.jupyter-releaser]
skip = [ "check-links",]

[project.entry-points.fps_router]
fps-lab = "fps_lab.routes"

[project.entry-points.fps_config]
fps-lab = "fps_lab.config"

[tool.hatch.version]
path = "fps_lab/__init__.py"
