[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_lab"
description = "An FPS plugin for the JupyterLab/RetroLab API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.8"
dependencies = [
  "babel",
  "json5",
  "jupyverse-api >=0.1.2,<1",
]
dynamic = [ "version",]
[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [ ".*",]

[tool.jupyter-releaser]
skip = [ "check-links",]

[project.entry-points]
"asphalt.components"   = {lab = "fps_lab.main:LabComponent"}
"jupyverse.components" = {lab = "fps_lab.main:LabComponent"}

[tool.hatch.version]
path = "fps_lab/__init__.py"
