[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_lab"
version = "0.9.0"
description = "An FPS plugin for the JupyterLab/Notebook API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.9"
dependencies = [
  "importlib_metadata >=3.6; python_version<'3.10'",
  "babel",
  "json5",
  "jupyverse-api >=0.10.0,<0.11.0",
]
[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [ ".*",]

[tool.jupyter-releaser]
skip = [ "check-links",]

[project.entry-points]
"fps.modules"       = {lab = "fps_lab.main:LabModule"}
"jupyverse.modules" = {lab = "fps_lab.main:LabModule"}

[tool.hatch.version]
path = "fps_lab/__init__.py"
