[metadata]
name = fps_lab
version = attr: fps_lab.__version__
description = An FPS plugin implementing the JupyterLab/RetroLab API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:

install_requires =
  fps >=0.0.8
  fps-auth
  aiofiles
  babel
  json5

[options.entry_points]
fps_router =
    fps-lab = fps_lab.routes
fps_config =
    fps-lab = fps_lab.config
