[metadata]
name = fps_lab
version = attr: fps_lab.__version__
description = An FPS plugin for the JupyterLab/RetroLab API
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Windows, Linux, Mac OS X
keywords = jupyter, server, fastapi, pluggy, plugins

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  fps >=0.0.8
  fps-auth
  aiofiles
  babel
  json5

[options.entry_points]
fps_router =
    fps-lab = fps_lab.routes
fps_config =
    fps-lab = fps_lab.config
