[metadata]
name = fps_login
version = attr: fps_login.__version__
description = An FPS plugin implementing the login API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:

install_requires =
  fps >=0.0.8
  fps_auth

[options.entry_points]
fps_router =
    fps-login = fps_login.routes
